fixed IE9 thumb spacing

--- a/src/modules/coreplayer-treeviewleftpanel-module/css/styles.less
+++ b/src/modules/coreplayer-treeviewleftpanel-module/css/styles.less
@@ -115,7 +115,7 @@
                         padding: 2px;
                         max-height: 180px;
                         overflow: hidden;
-                        min-width: 96px;
+                        width: 96px;
                         text-align: center;
 
                         &.loading{
@@ -127,7 +127,8 @@
                         }
 
                         img{
-                            margin: 0 auto;
+                            display: block;
+                            //margin: 0 auto;
                         }
                     }
 
@@ -175,7 +176,9 @@
 
                 .wrap{
                     border: none;
+
                     img{
+                        display: block;
                         width: 90px;
                     }
                 }
